--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,6 +7,7 @@
 
 .f-left{
 	float: left;
+  text-align:center;
 }
 .f-right{
 	float: right;
@@ -42,7 +43,7 @@ div.row.comment{
 	padding-right: 10px;
 	margin-bottom: 10px;
 	margin-top: 10px;
-	background-color: red;
+	background-color: #f5f7fa;
 	border-radius: 5px;	
 }
 
